updated slug setting and exluded src from git commits

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,6 +7,9 @@ local_backend: true # Optional if you want to use the local proxy mode
 media_folder: media # I'm not using these default media directories at the moment.
 public_folder: /media
 
+slug:
+    encoding: "unicode"
+
 collections:
     - name: "posts"
       label: "Posts"
