--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "novela-base",
   "version": "1.1.0",
   "main": "index.js",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "build": "yarn workspace www build",
