changed cms content loc

--- a/www/static/admin/config.yml
+++ b/www/static/admin/config.yml
@@ -52,7 +52,7 @@ collections:
           - { label: "Body", name: "body", widget: "markdown" }
     - name: "authors"
       label: "Authors"
-      folder: "content/authors/authors"
+      folder: "www/content/authors"
       create: true
       delete: true
       format: "yml"
