changed posts location

--- a/www/static/admin/config.yml
+++ b/www/static/admin/config.yml
@@ -4,6 +4,8 @@ backend: # Set up your backend
 
 local_backend: true # Optional if you want to use the local proxy mode
 
+publish_mode: editorial_workflow
+
 media_folder: media # I'm not using these default media directories at the moment.
 public_folder: /media
 
@@ -13,7 +15,7 @@ slug:
 collections:
     - name: "posts"
       label: "Posts"
-      folder: "content/posts"
+      folder: "www/content/posts"
       create: true
       delete: true
       path: "{{slug}}/index"
