--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "version": "1.6.5",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build && gatsby serve",
+    "build": "gatsby build",
     "serve": "gatsby serve",
     "develop": "rm -rf .cache && gatsby develop",
     "clean": "gatsby clean"
