--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.11",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
@@ -18,6 +21,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.6",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
